chore: extract api user repository
