# pkg/api/docs/swagger.json
@@ -100,10 +100,13 @@
                 "accessToken": {
                     "type": "string"
                 },
-                "expiresIn": {
-                    "type": "integer"
+                "accessTokenExpiresAt": {
+                    "type": "string"
                 },
                 "refreshToken": {
+                    "type": "string"
+                },
+                "refreshTokenExpiresAt": {
                     "type": "string"
                 }
             }
